# AffectNet_torch

./: Pipfile  README.md  datasets.py  pyproject.toml
test/: test.ipynb
torchaffectnet/: __init__.py  collators.py  const.py  datasets.py  utils.py
